# thales

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml  codedev.yml  doxygen.yml
benchmarks/: CMakeLists.txt  benchmark_black_scholes.cpp  benchmark_main.cpp  benchmark_portfolio.cpp
include/config/: config.h
include/trading/: black_scholes.h  option.h  order.h  portfolio.h  position.h
include/utils/: http_client.h  logging.h
scripts/: build.sh  format.sh  lint.sh  test.sh  validate.sh
src/: main.cpp
src/config/: config.cpp
src/trading/: black_scholes.cpp  broker_interface.cpp  option.cpp  order.cpp  portfolio.cpp  position.cpp
src/utils/: http_client.cpp  logging.cpp
tests/: CMakeLists.txt  test_black_scholes.cpp  test_main.cpp  test_portfolio.cpp
